@@ -10,7 +10,7 @@ c
       integer limp(9,mimp)
       character*6 catt(2,matt),catm(4,matm)
 c
-      integer i,j,k
+      integer i,j,k,ii,jj,kk
 c
       pre_check=.true.
 c
@@ -19,6 +19,9 @@ c     --------------------
 c
       do 1 i=1,natt
       if(latt(1,i).le.0) then
+      do 11 j=1,i-1
+      if(latt(1,j).le.0.and.catt(1,i).eq.catt(1,j)) goto 1
+   11 continue
       if(lprint.ge.1) write(lfnout,1000) catt(1,i)
  1000 format('PARAMETERS COULD NOT BE FOUND FOR ATOM TYPE ',a6)
       pre_check=.false.
@@ -32,11 +35,26 @@ c
       if(j.eq.1.and.(k.eq.1.or.k.eq.3.or.k.eq.5)) goto 3
       if(j.eq.2.and.(k.eq.2.or.k.eq.3.or.k.eq.6)) goto 3
       if(j.eq.3.and.(k.eq.4.or.k.eq.5.or.k.eq.6)) goto 3
+      do 12 ii=1,i
+      if(lbnd(3,ii).le.0.and.lbnd(3,ii).gt.-7) then
+      kk=-lbnd(3,i)
+      do 13 jj=1,3
+      if(jj.eq.1.and.(kk.eq.1.or.kk.eq.3.or.kk.eq.5)) goto 13
+      if(jj.eq.2.and.(kk.eq.2.or.kk.eq.3.or.kk.eq.6)) goto 13
+      if(jj.eq.3.and.(kk.eq.4.or.kk.eq.5.or.kk.eq.6)) goto 13
+      if(i.eq.ii.and.j.eq.jj) goto 12
+      if((catm(1+j,lbnd(1,i)).eq.catm(1+jj,lbnd(1,ii)).and.
+     + catm(1+j,lbnd(2,i)).eq.catm(1+jj,lbnd(2,ii))).or.
+     + (catm(1+j,lbnd(1,i)).eq.catm(1+jj,lbnd(2,ii)).and.
+     + catm(1+j,lbnd(2,i)).eq.catm(1+jj,lbnd(1,ii)))) goto 3
+   13 continue
+      endif
+   12 continue
       if(lprint.ge.1) write(lfnout,1001)
      + catm(1+j,lbnd(1,i)),catm(1+j,lbnd(2,i))
  1001 format('PARAMETERS COULD NOT BE FOUND FOR BOND TYPE ',a6,'-',a6)
-    3 continue
       pre_check=.false. 
+    3 continue
       endif
     2 continue
 c
@@ -47,12 +65,28 @@ c
       if(j.eq.1.and.(k.eq.1.or.k.eq.3.or.k.eq.5)) goto 3
       if(j.eq.2.and.(k.eq.2.or.k.eq.3.or.k.eq.6)) goto 3
       if(j.eq.3.and.(k.eq.4.or.k.eq.5.or.k.eq.6)) goto 3
+      do 14 ii=1,i
+      if(lang(4,ii).le.0.and.lang(4,ii).gt.-7) then
+      kk=-lang(4,i)
+      do 15 jj=1,3
+      if(jj.eq.1.and.(kk.eq.1.or.kk.eq.3.or.kk.eq.5)) goto 15
+      if(jj.eq.2.and.(kk.eq.2.or.kk.eq.3.or.kk.eq.6)) goto 15
+      if(jj.eq.3.and.(kk.eq.4.or.kk.eq.5.or.kk.eq.6)) goto 15
+      if(i.eq.ii.and.j.eq.jj) goto 14
+      if(catm(1+j,lang(2,i)).eq.catm(1+jj,lang(2,ii)).and.
+     + ((catm(1+j,lang(1,i)).eq.catm(1+jj,lang(1,ii)).and.
+     + catm(1+j,lang(3,i)).eq.catm(1+jj,lang(3,ii))).or.
+     + (catm(1+j,lang(1,i)).eq.catm(1+jj,lang(3,ii)).and.
+     + catm(1+j,lang(3,i)).eq.catm(1+jj,lang(1,ii))))) goto 5
+   15 continue
+      endif
+   14 continue
       if(lprint.ge.1) write(lfnout,1002)
      + catm(1+j,lang(1,i)),catm(1+j,lang(2,i)),catm(1+j,lang(3,i))
  1002 format('PARAMETERS COULD NOT BE FOUND FOR ANGLE TYPE ',
      + a6,'-',a6,'-',a6)
-    5 continue
       pre_check=.false. 
+    5 continue
       endif
     4 continue
 c
@@ -63,12 +97,31 @@ c
       if(j.eq.1.and.(k.eq.1.or.k.eq.3.or.k.eq.5)) goto 3
       if(j.eq.2.and.(k.eq.2.or.k.eq.3.or.k.eq.6)) goto 3
       if(j.eq.3.and.(k.eq.4.or.k.eq.5.or.k.eq.6)) goto 3
+      do 16 ii=1,i
+      if(ldih(5,ii).le.0.and.ldih(5,ii).gt.-7) then
+      kk=-ldih(5,i)
+      do 17 jj=1,3
+      if(jj.eq.1.and.(kk.eq.1.or.kk.eq.3.or.kk.eq.5)) goto 17
+      if(jj.eq.2.and.(kk.eq.2.or.kk.eq.3.or.kk.eq.6)) goto 17
+      if(jj.eq.3.and.(kk.eq.4.or.kk.eq.5.or.kk.eq.6)) goto 17
+      if(i.eq.ii.and.j.eq.jj) goto 16
+      if((catm(1+j,ldih(1,i)).eq.catm(1+jj,ldih(1,ii)).and.
+     + catm(1+j,ldih(2,i)).eq.catm(1+jj,ldih(2,ii)).and.
+     + catm(1+j,ldih(3,i)).eq.catm(1+jj,ldih(3,ii)).and.
+     + catm(1+j,ldih(4,i)).eq.catm(1+jj,ldih(4,ii))).or.
+     + (catm(1+j,ldih(1,i)).eq.catm(1+jj,ldih(4,ii)).and.
+     + catm(1+j,ldih(2,i)).eq.catm(1+jj,ldih(3,ii)).and.
+     + catm(1+j,ldih(3,i)).eq.catm(1+jj,ldih(2,ii)).and.
+     + catm(1+j,ldih(4,i)).eq.catm(1+jj,ldih(1,ii)))) goto 7
+   17 continue
+      endif
+   16 continue
       if(lprint.ge.1) write(lfnout,1003) catm(1+j,ldih(1,i)),
      + catm(1+j,ldih(2,i)),catm(1+j,ldih(3,i)),catm(1+j,ldih(4,i))
  1003 format('PARAMETERS COULD NOT BE FOUND FOR DIHEDRAL TYPE ',
      + a6,'-',a6,'-',a6,'-',a6)
-    7 continue
       pre_check=.false. 
+    7 continue
       endif
     6 continue
 c
@@ -79,12 +132,42 @@ c
       if(j.eq.1.and.(k.eq.1.or.k.eq.3.or.k.eq.5)) goto 3
       if(j.eq.2.and.(k.eq.2.or.k.eq.3.or.k.eq.6)) goto 3
       if(j.eq.3.and.(k.eq.4.or.k.eq.5.or.k.eq.6)) goto 3
+      do 18 ii=1,i
+      if(limp(5,ii).le.0.and.limp(5,ii).gt.-7) then
+      kk=-limp(5,i)
+      do 19 jj=1,3
+      if(jj.eq.1.and.(kk.eq.1.or.kk.eq.3.or.kk.eq.5)) goto 19
+      if(jj.eq.2.and.(kk.eq.2.or.kk.eq.3.or.kk.eq.6)) goto 19
+      if(jj.eq.3.and.(kk.eq.4.or.kk.eq.5.or.kk.eq.6)) goto 19
+      if(i.eq.ii.and.j.eq.jj) goto 18
+      if(catm(1+j,limp(1,i)).eq.catm(1+jj,limp(1,ii)).and.
+     + ((catm(1+j,limp(2,i)).eq.catm(1+jj,limp(2,ii)).and.
+     + catm(1+j,limp(3,i)).eq.catm(1+jj,limp(3,ii)).and.
+     + catm(1+j,limp(4,i)).eq.catm(1+jj,limp(4,ii))).or.
+     + (catm(1+j,limp(2,i)).eq.catm(1+jj,limp(2,ii)).and.
+     + catm(1+j,limp(3,i)).eq.catm(1+jj,limp(4,ii)).and.
+     + catm(1+j,limp(4,i)).eq.catm(1+jj,limp(3,ii))).or.
+     + (catm(1+j,limp(2,i)).eq.catm(1+jj,limp(3,ii)).and.
+     + catm(1+j,limp(3,i)).eq.catm(1+jj,limp(2,ii)).and.
+     + catm(1+j,limp(4,i)).eq.catm(1+jj,limp(4,ii))).or.
+     + (catm(1+j,limp(2,i)).eq.catm(1+jj,limp(3,ii)).and.
+     + catm(1+j,limp(3,i)).eq.catm(1+jj,limp(4,ii)).and.
+     + catm(1+j,limp(4,i)).eq.catm(1+jj,limp(2,ii))).or.
+     + (catm(1+j,limp(2,i)).eq.catm(1+jj,limp(4,ii)).and.
+     + catm(1+j,limp(3,i)).eq.catm(1+jj,limp(2,ii)).and.
+     + catm(1+j,limp(4,i)).eq.catm(1+jj,limp(3,ii))).or.
+     + (catm(1+j,limp(2,i)).eq.catm(1+jj,limp(4,ii)).and.
+     + catm(1+j,limp(3,i)).eq.catm(1+jj,limp(3,ii)).and.
+     + catm(1+j,limp(4,i)).eq.catm(1+jj,limp(2,ii))))) goto 9
+   19 continue
+      endif
+   18 continue
       if(lprint.ge.1) write(lfnout,1004) catm(1+j,limp(1,i)),
      + catm(1+j,limp(2,i)),catm(1+j,limp(3,i)),catm(1+j,limp(4,i))
  1004 format('PARAMETERS COULD NOT BE FOUND FOR IMPROPER TYPE ',
      + a6,'-',a6,'-',a6,'-',a6)
-    9 continue
-      pre_check=.false. 
+      pre_check=.false.
+    9 continue 
       endif
     8 continue
 c
